# Rokey_isaac-sim

./: .gitignore  INTEGRATION_OVERVIEW.md  PRESENTATION_ALGORITHM_FLOW.md  PROJECT_OVERVIEW.md  README.md  SETUP.md  m0609_test.usd  run_sim.sh  session_log.md  test_m0609_place.py
.playwright-mcp/: page-2026-05-24T17-18-39-982Z.yml  page-2026-05-24T17-19-29-700Z.yml  page-2026-05-25T16-17-12-131Z.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  iw_hub_fsm.md  task_completion.md  (+3 more)
DB/: BRIDGE_SETTINGS.md  README.md  init_db.py  reset_and_setup.py  schema.md  section_bridge.py  setup_schema.py  trigger_bridge.py
Rokey_isaac-sim-iw_hub/: .gitignore  run_sim.sh  test_m0609_place.py
UI/: README.md  package-lock.json  package.json
grid/: PROJECT_STRUCTURE.md  warehouse_layout.html  warehouse_layout.py
main_isaac/: POD_LAYOUT.md  auto_spawn_panel.py  control_center.py  create_codi_box_from2.py  draw_warehouse.py  external_control_center.py  label_sizes.json  main.py  minimap.py  minimap_process.py  path_planner.py  robot_config.py  warehouse_v3.usd  warehouse_v7.usda  work_signals.py  world_setup.py  zone_config.json
main_isaac/robots/iw_hub/src/iw_hub_movement/: package.xml  setup.py
main_isaac/robots/iw_hub/src/iw_hub_movement/iw_hub_movement/: axis_nav.py  models.py  move_to_point.py
main_isaac/robots/iw_hub/src/iw_hub_movement/launch/: iw_hub.launch.py
robot/: ARCHITECTURE.md  create_scene.py  isaac_aruco_main.py  scene_setup.py
simulation/: README.md  create_warehouse.py  iwhub_action_graph.py  iwhub_inspect.py  warehouse.v.0.blend
(+195 files in other folders)
