<?xml version="1.0"?>
<package format="3">
  <name>iw_hub_movement</name>
  <version>0.1.0</version>
  <description>IW Hub 이동 제어 패키지 (Rokey_isaac-sim 통합)</description>
  <maintainer email="domcove9@gmail.com">Ash-Ahn-Mechanic</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
